--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "firebase": "^12.7.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.11.0",
+    "remark-gfm": "^4.0.1",
     "three": "^0.182.0"
   },
   "devDependencies": {
@@ -31,8 +33,10 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "javascript-obfuscator": "^5.2.1",
     "jsdom": "^27.4.0",
     "postcss": "^8.5.6",
+    "rollup-plugin-obfuscator": "^1.1.0",
     "tailwindcss": "^4.1.18",
     "vite": "^7.2.4",
     "vitest": "^4.0.18"
